Plugin name changed

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	function()
 	{
 		//-----------------------------------------
-		$(".box-timer").timerpicker({activate: activate, setTime:true});
+		$(".box-timer").jquery_timepicker({activate: activate, setTime:true});
 
 		function activate (event){
 			//plugin activated
 		}
 
-		$("#box").timerpicker({});
+		$("#box").jquery_timepicker({});
 
 		//-----------------------------------------
 	});
